<resources>
    <string name="app_name">Huskis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">Add an item</string>
    <string name="input_hint">E.g Shopping list</string>
    <string name="deleteBtn">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="input">Enter name of list</string>
    <string name="ok">Ok</string>
    <string name="loggedIn">Logged user\n</string>
    <string name="headerText">Huskis</string>
    <string name="DefaultText">Default text</string>
    <string name="inputItem">Enter name of item</string>
    <string name="inputItemExample">E.g Buy milk</string>
    <string name="editHeaderText">Enter new list name</string>
    <string name="editHeaderHint">E.g Shopping list</string>
    <string name="noData">No lists to show. Add one!</string>
    <string name="noItemData">Forgot something?</string>
    <string name="loginFailedToast">Login to google cloud service failed</string>
    <string name="noUserLogged">Logged out\n</string>
    <string name="logoutFailedToast">An error has occured while signing out</string>
</resources>